# ASPArmor

./: .gitignore  README.md  bash-example-apparmor-profile  bash-example-config.txt  bash-example-userarmor-profile  bash-example.sh  bash-results.csv  clean.sh  clingo-results.csv  example.asp  profile_apparmor  profile_userarmor  run-bash-experiment.sh  run-clingo-experiment.sh  run-confined-via-apparmor.sh  run-confined-via-userarmor.sh  run-sand-boxed-via-bwrap.sh  run-unconfined.sh  setup_env.sh
.usr.bin.clingo/: USER  mappings
admin_cli/: .env  RlimitRecord.py  admincli.py  apparmor_utilities_integration.py  bak_manager.py  config.py  ex_subprofile  exceptions.py  kernel_reader.py  mappings_manager.py  process_rules_data_structure.py  profile_manager.py  regexs.py  requirements.txt  second_prototype  simple_prototype  subprofile_manager.py  users_manager.py
cli-wrapper-launcher/: alerts.py  final_wrapper.py  first.py  mockdb.txt  profileinfo.txt  profilepath.txt  requirements.txt  wrapper.py  wrapper_launcher.py
my_shared_library/: pyproject.toml  setup.py
my_shared_library/my_shared_library/: alerts.py  database_connection.py  exceptions.py  info_dao.py  kcontent_dao.py
my_shared_library/my_shared_library.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ua-enforce/: ua-enforce.c
ua-enforce-py/: Makefile  pyproject.toml
ua-enforce-py/ua_enforce_py/: main.py
ua-exec/: Makefile  bash.csv  tester_sup.sh  ua-exec.c
ua-generate/: Makefile  ua-generate.c
userarmor_demo/: app.py  pyproject.toml  requirements.txt
userarmor_demo/static/: style.css
(+13 files in other folders)
