[tool.poetry]
name = "my-shared-library"
version = "1.0.0"
description = "Libreria condivisa tra le CLI"
authors = ["Pierpaolo Sestito pierpaolo.sestito@outlook.it"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
